syntax = "proto3";

package kr.hope.grpc.protocol;

option java_package = "kr.hope.grpc.protocol";
option java_multiple_files = true;

service BoardService {
    rpc CreateBoard (CreateBoardRequest) returns (CreateBoardResponse) {}
    rpc GetBoard (GetBoardRequest) returns (GetBoardResponse) {}
    rpc UpdateBoard (UpdateBoardRequest) returns (UpdateBoardResponse) {}
    rpc DeleteBoard (DeleteBoardRequest) returns (DeleteBoardResponse) {}
}

message Board {
    int32 board_id = 1;
    string title = 2;
    string content = 3;
    string writer = 4;
}

message CreateBoardRequest {
    string title = 1;
    string content = 2;
    string writer = 3;
}

message CreateBoardResponse {
    Board board = 1;
}

message GetBoardRequest {
    int32 board_id = 1;
}

message GetBoardResponse {
    Board board = 1;
}

message UpdateBoardRequest {
    int32 board_id = 1;
    string title = 2;
    string content = 3;
    string writer = 4;
}

message UpdateBoardResponse {
    Board board = 1;
}

message DeleteBoardRequest {
    int32 board_id = 1;
}

message DeleteBoardResponse {
    int32 board_id = 1;
}
